syntax = "proto2";

option java_multiple_files = true;
option java_package = "net.spals.appbuilder.grpc.sample";
option java_outer_classname = "SampleServerProto";

service SampleRouteService {

    rpc GetSample(SampleRequest) returns (SampleResponse) {}
}

message SampleRequest {
    optional int32 intField = 1;
    optional string stringField = 2;
}

message SampleResponse {
    optional int32 intField = 1;
    optional string stringField = 2;
}
